analysis and results sections ready for Mario
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@9506 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/data_taking.tex
+++ b/2014/90m paper/data_taking.tex
@@ -1,3 +1,5 @@
+\section{Data taking}
+
 The presented measurement is based on data taken in July 2012, during the LHC fill number 2836, where the vertical
 RPs were inserted at $9.5\,\sigma_{\rm beam}$. Two (in the beginning) or three (later) bunches were used, with
 a typical population of $8\cdot10^{10}$ protons, yielding instantaneous luminosity of about $10^{28}\un{cm^{-2}s^{-1}}$ per bunch. The special
