--- a/2014/90m paper/experimental_apparatus.tex
+++ b/2014/90m paper/experimental_apparatus.tex
@@ -9,3 +9,4 @@ from the IP) and far ($220\un{m}$). Each unit consists of three RPs: one approac
 one from bottom and one horizontally. Since elastic scattering events contain two anti-parallel protons,
 the detected events can have two topologies, called diagonals: 45 bottom -- 56 top and 45 top -- 56 bottom.
 
+This report will use a reference frame where $x$ denotes horizontal axis (pointing out of the LHC ring) and $y$ vertical axis (pointing against gravity).
